@@ -1,0 +1,15 @@
+# DB: MariaDB
+MYSQL_ROOT_PASSWORD=password_for_root
+MYSQL_DATABASE=radar_db
+MYSQL_USER=radar
+MYSQL_PASSWORD=radar
+
+## Django DB connection
+DB_NAME=radar_db
+DB_USER=radar
+DB_PASSWORD=radar
+DB_HOST=db
+DB_PORT=3306
+
+## Django Setup
+DEBUG=True
