@@ -1,0 +1,6 @@
+## Django DB connection
+DB_NAME=radar_db
+DB_USER=radar
+DB_PASSWORD=radar
+DB_HOST=10.0.0.1
+DB_PORT=3306
