@@ -2,6 +2,7 @@
 -
 
 * 0.0.1
+- Update readme.md with info for deployment
 - Add docker-compose for development environment
 - Add Makefile for development environment
 - Add docker
